--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.5",
+    "sass": "^1.69.7",
     "vue": "^3.3.11"
   },
   "devDependencies": {
