--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "sass": "^1.69.7",
+    "scss": "^0.2.4",
     "vue": "^3.3.11"
   },
   "devDependencies": {
