--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.5",
     "bootstrap": "^5.3.2",
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "sass": "^1.69.7",
     "scss": "^0.2.4",
     "vue": "^3.3.11"
